--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -2,34 +2,56 @@ name: Django CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ master ]
+    branches: [ "master" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:14
+        env:
+          POSTGRES_DB: django
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: root2025
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
-      # 1️⃣ Checkout code
       - uses: actions/checkout@v3
 
-      # 2️⃣ Set up Python
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
-      # 3️⃣ Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # 4️⃣ Run migrations
       - name: Run migrations
-        run: python manage.py migrate
+        env:
+          DB_NAME: django
+          DB_USER: postgres
+          DB_PASSWORD: root2025
+          DB_HOST: localhost
+        run: |
+          python manage.py migrate
 
-      # 5️⃣ Run tests
       - name: Run tests
-        run: python manage.py test
+        env:
+          DB_NAME: django
+          DB_USER: postgres
+          DB_PASSWORD: root2025
+          DB_HOST: localhost
+        run: |
+          python manage.py test
